docs: 独自歴機能とデータ整合性チェックに関する詳細を追加

--- a/要件定義書.md
+++ b/要件定義書.md
@@ -213,8 +213,9 @@
         - 主要な歴史的イベントがマークとして表示可能。
     - 独自歴機能：
         - 地球とは異なる公転周期・自転周期・月齢に対応した独自歴に対応。
-        - （詳細要検討）
-
+        - 時間軸スライダーは設定された独自歴に従って正しく目盛りとラベルを表示。
+        - 各オブジェクトのプロパティに記録される日時情報は、独自歴の単位に基づいて内部的に正規化・管理される。
+        - ユーザーが独自歴の設定を変更した場合、すべての時間依存データがリアルタイムに再計算され、表示が更新される。
 - **時間依存データの管理**:
     - 各オブジェクト（点、線、面）は時間依存のプロパティを持つ：
         - 属性（名前、説明など）は時間によって変化可能。
@@ -234,8 +235,11 @@
         - 内部的には年月日をすべて日付オブジェクトとして扱う。
         - UI上では年のみ、年月、年月日の各レベルで表示・編集可能。
         - 時間比較や計算はすべて正規化された値で行う。
-    - ここの詳細は要検討（過去一点での編集がどう未来に影響するかなど、色々）。AI、おねがい！
-
+    - 過去のある一点でオブジェクトのプロパティや存在期間を編集した場合、以下の挙動となる：
+        - 編集点より未来のプロパティは、その変更が明示的に終了または上書きされるまで継続的に影響を受ける。
+        - 未来の時点で既に明示的に設定されたプロパティは、過去の変更により自動的には書き換えられない（競合する場合はユーザーに警告表示）。
+        - オブジェクトの存在終了を過去に設定した場合、その後の未来のプロパティはすべて無効化される（削除はされず、一時的に非アクティブとなる）。再び存在期間を伸ばした場合、元のプロパティが再表示される。
+        
 ### 2.3 オブジェクト編集機能
 
 - **アンドゥ・リドゥ**:
@@ -387,6 +391,16 @@
         - ファイル内のバージョン情報を確認。
         - 互換性のないバージョンの場合は警告を表示。
         - 可能な場合は自動的に形式を変換。
+
+-　**データ読み込み時の詳細な挙動**:
+    - ファイルを読み込んだ時点で、データのバージョン互換性をチェック。
+    - 互換性がない場合は以下のオプションを提供：
+        - 自動変換（可能な場合）
+        - 古いバージョンのデータのバックアップを別途保持
+    - データ整合性チェックでは以下を確認し、不整合がある場合はユーザーが選択可能な自動修復オプションを提供：
+        - 存在しない頂点を参照している点・線・面情報
+        - レイヤーの階層構造の不整合
+        - 時間プロパティの矛盾（例：開始日時が終了日時よりも未来に設定されている場合）
 
 - **警告機能**:
     - 未保存変更の警告：
@@ -603,6 +617,10 @@
     }[];
   }
   ```
+- **面情報の補足事項**:
+    - ポリゴン（面情報）が飛び地を持つ場合（isMultiPolygonがtrue）、subPolygonsは必須項目。
+    - vertexIdsは、下位領域を持つ場合にのみnullまたは空配列で設定。それ以外の場合は必ず外周頂点を指定。
+    - 下位領域によってのみ定義されるポリゴンは、vertexIdsに依存せず、常にchildIdsを通じて形状を動的に構築する。
 
 - **Layer（レイヤー）**
   ```typescript
@@ -836,3 +854,5 @@
 | 穴 | 面情報内部にある除外される領域 |
 | 衝突判定 | 複数のポリゴン間の重なりを検出する処理 |
 | エッジ滑り | 頂点が他のポリゴンのエッジに当たった際に沿って移動する動作 |
+| データ整合性チェック | データの参照整合性、内部矛盾などを検出・修復する処理 |
+| 独自歴 | ユーザーが設定した公転・自転周期などに基づく架空の暦法 |
