docs(guide): 開発ガイドにコーディング規約とGitワークフローを追加

--- a/開発ガイド.md
+++ b/開発ガイド.md
@@ -1,5 +1,11 @@
 # 時空地図アプリケーション - 開発ガイド
 
+## 重要な注意事項
+
+- 余計な変更は行わないでください
+- 提供されていないファイルを想像で書き換えることは避けてください
+- 提供されていないファイルに実装されているものを変更する場合は、まず現在の実装を確認してください（ファイルを要求してください）
+
 ## 1. アーキテクチャ概要
 
 時空地図アプリケーション（time-map-app）は、ドメイン駆動設計（DDD）の原則に基づいて構築されます。アプリケーションは、以下の主要層に分割されています：
