refactor: "特徴"を"地物"に用語変更し、コードの一貫性を向上

--- a/開発ガイド.md
+++ b/開発ガイド.md
@@ -17,7 +17,7 @@
 - **エンティティ**:
   - `Vertex`: 地図上の点を表す不変オブジェクト
   - `Feature`: すべての地理オブジェクトの基底クラス
-  - `Point`, `Line`, `Polygon`: 具体的な地理的特徴を表すクラス
+  - `Point`, `Line`, `Polygon`: 具体的な地理的地物を表すクラス
   - `Layer`: レイヤー情報を表すクラス
 
 - **値オブジェクト**:
@@ -294,7 +294,7 @@ class AddFeatureCommandHandler {
     let feature;
     const featureId = this.idGenerator.next('feature');
     
-    // 適切なファクトリーメソッドを使用して特徴オブジェクトを作成
+    // 適切なファクトリーメソッドを使用して地物オブジェクトを作成
     switch (command.featureType) {
       case 'point':
         feature = Point.create(featureId, command.properties, command.geometry);
