docs: 注意事項を追加し、変更に関するガイドラインを明確化

--- a/開発ガイド.md
+++ b/開発ガイド.md
@@ -2,9 +2,12 @@
 
 ## 重要な注意事項
 
-- 余計な変更は行わないでください
-- 提供されていないファイルを想像で書き換えることは避けてください
-- 提供されていないファイルに実装されているものを変更する場合は、まず現在の実装を確認してください（ファイルを要求してください）
+- 余計な変更は行わないでください。
+- 指示されていない変更をしないでください。
+- 可能な限り、変更箇所を最小限にとどめてください。
+- 提供されていないファイルを想像で書き換えることは避けてください。
+- 提供されていないファイルに実装されているものを変更する場合は、まず現在の実装を確認してください（ファイルを要求してください）。
+- (Claude向け) Artifact機能を使わないで開発を行ってください。
 
 ## 1. アーキテクチャ概要
 
