docs: SVGレンダリングの実装についての詳細を追加

--- a/開発ガイド.md
+++ b/開発ガイド.md
@@ -824,6 +824,16 @@ describe('Vertex', () => {
    }
    ```
 
+### 4.5 SVGレンダリングの実装について
+
+  SVGRenderer では、ビューポートの変換に `viewBox` 属性を使用します。これにより以下の利点があります：
+
+  - SVG標準の変換機能を活用し、個別要素の座標計算が簡略化される
+  - パフォーマンスの向上（要素ごとの座標再計算が不要）
+  - ズーム・パン操作の正確性向上
+
+  ViewportManager からの更新情報は SVGRenderer の render メソッドで viewBox 属性に反映され、SVG内の座標系全体が自動的に変換されます。
+
 ## 5. デバッグと最適化
 
 ### 5.1 パフォーマンス最適化
