docs: 未解決の不具合リストを更新し、詳細な説明を追加

--- a/現状.md
+++ b/現状.md
@@ -4,26 +4,35 @@
 ## 未解決の不具合リスト
 
 ### 重要度高（機能的問題）
-1. **地図パン（ドラッグ）が機能していない**
-   - 最も基本的な操作が動作せず、致命的
 
-2. **マウスホイールによるズームが機能していない**
-   - 拡大縮小操作ができない
+1. **緯度経度の表示がおかしい**
+   - 画像サイズに合わせて緯度経度が計算されておらず、南緯2000度とかが表示されてしまう。地図のサイズに関わらず最大値があるべき
+   - 経度がループしていない
+   - この不具合はグリッドに関連する
+   - 緯度・経度両方に問題が存在する。
+   - グリッドの表示される領域が表示領域と異なっている
+      - 右端にグリッドの表示されない領域があ
+      - 下端は不明
 
-3. **地図上のクリックが検知されない**
-   - 追加モードなどでクリックしても反応がない
-   - 距離測定ツールも機能しない
+2. **クリック位置がずれる**
+   - 画面サイズの問題？
+   - 測定モード・追加モードで確認。
+   - 特に画面サイズを全画面にしたうえでリロードした直後に発生する？
+   - 画面サイズを全画面にして不具合が発生していることを確認し、画面サイズを縮小したとき、
+
+3. **地図がループしていない**
+   - 無限横スクロールができない
 
 4. **編集機能が使用できない**
-   - 点、線、面の追加ができない
-   - オブジェクト選択や編集ができない
-
-1,2,3,4はSVGに対するクリックを行おうとしているために発生している。
-別にイベントをキャッチするための透明なオーバーレイを作成し、そちらへのイベントを検知してSVGのいちを動かすようにすれば解決できそう
-その他に、機能自体が未実装である場合もありそう。
+   - 点、線、面の追加は機能している
+   - オブジェクト選択や編集が全くできない
+   - そういえば面情報の境界線に点を追加するツールって仕様から漏れてた？
 
 5. **グリッドボタンが機能していない**
    - ボタン自体は表示されるが押しても反応がない
+   - グリッドは起動直後から表示されている。グリッドボタンを押しても消えない
+
+6. **測定クリアボタンが動かない**
 
 ### 重要度中（UI/UX問題）
 1. **穴追加ツールが無反応**
@@ -33,7 +42,25 @@
    - 操作が追加できないため検証できない
    - 一部は未実装
 
+3. **緯度経度の表示がおかしい**
+   - 南緯と北緯の記号が逆：赤道と思しき線の下に10°N,20°Nと続く
+   - ズームするほど緯度経度の表示が巨大化する
+      - 主に経度の表示が隣の表示と重なって読めない。
+      - 緯度経度が過剰になるバグが直れば大丈夫かも
+
+4. **面情報の中は塗られていてほしい**
+   - この不具合を修正した場合、仕様に挙動を書き加えること。
+
+5. **測定ツールの測定結果が見づらい**
+   - 点A、Bというふうな情報だけを点近傍に表示して、A-B間の距離は別の箇所に表示するべきでは？
+   - 大円距離を数値で表示するなら、大遠距離での線を描画するべき
+   - この不具合を修正した場合、仕様に挙動を書き加えること。
+
 ### 重要度低（拡張機能）
 1. **セーブ・ロード機能が未実装**
    - ボタンは追加されたが機能は未実装
-   - 現状は自動保存のみ機能（バックアップディレクトリ対応済み）
+   - 現状は自動保存のみ機能
+
+2. **パフォーマンス問題**
+   - ちょっと重たい
+   - ログ出力のせいかもしれないので一通り機能が落ち着くまで様子見
