docs: 提供されていないファイルに関する変更の指示を明確化

--- a/開発ガイド.md
+++ b/開発ガイド.md
@@ -6,7 +6,7 @@
 - 指示されていない変更をしないでください。
 - 可能な限り、変更箇所を最小限にとどめてください。
 - 提供されていないファイルを想像で書き換えることは避けてください。
-- 提供されていないファイルに実装されているものを変更する場合は、まず現在の実装を確認してください（ファイルを要求してください）。
+- 提供されていないファイルに実装されているものを変更する場合は、まず現在の実装を確認してください（具体的なファイル名で要求してください）。
 - (Claude向け) Artifact機能を使わないで開発を行ってください。
 
 ## 1. アーキテクチャ概要
