docs: 不具合リストを更新し、各問題の詳細な説明を追加

--- a/現状.md
+++ b/現状.md
@@ -7,32 +7,40 @@
 
 1. **緯度経度の表示がおかしい**
    - 画像サイズに合わせて緯度経度が計算されておらず、南緯2000度とかが表示されてしまう。地図のサイズに関わらず最大値があるべき
-   - 経度がループしていない
-   - この不具合はグリッドに関連する
-   - 緯度・経度両方に問題が存在する。
+   - 
+   - 経度がループしていない。経度も大きな値になってしまう
+   - 緯度・経度両方に問題が存在する
+   - 画像サイズが考慮されていない。本来、地図画像の下端が南緯90°、上端が北緯90°になっているべきだが、今は左上の一点が0,0になっている
+
+2. **グリッド表示がおかしい**
    - グリッドの表示される領域が表示領域と異なっている
-      - 右端にグリッドの表示されない領域があ
+      - 右端にグリッドの表示されない領域がある
       - 下端は不明
 
-2. **クリック位置がずれる**
+1,2,ともにSVGrendererの_renderGrid関数に問題がありそう
+
+3. **クリック位置がずれる**
+   - 右下方向にずれる
    - 画面サイズの問題？
    - 測定モード・追加モードで確認。
    - 特に画面サイズを全画面にしたうえでリロードした直後に発生する？
-   - 画面サイズを全画面にして不具合が発生していることを確認し、画面サイズを縮小したとき、
+   - 画面サイズを全画面にして不具合が発生していることを確認し、画面サイズを縮小したとき、クリック位置が正常になる
 
-3. **地図がループしていない**
-   - 無限横スクロールができない
+4. **地図がループしていない**
+   - 無限横スクロールができない。
+   - 地図が１枚しか表示されていない。
 
-4. **編集機能が使用できない**
+5. **編集機能が使用できない**
    - 点、線、面の追加は機能している
    - オブジェクト選択や編集が全くできない
    - そういえば面情報の境界線に点を追加するツールって仕様から漏れてた？
 
-5. **グリッドボタンが機能していない**
+6. **グリッドボタンが機能していない**
    - ボタン自体は表示されるが押しても反応がない
    - グリッドは起動直後から表示されている。グリッドボタンを押しても消えない
 
-6. **測定クリアボタンが動かない**
+7. **測定クリアボタンが動かない**
+   - ボタンを押しても測定線が消えない
 
 ### 重要度中（UI/UX問題）
 1. **穴追加ツールが無反応**
@@ -47,8 +55,11 @@
    - ズームするほど緯度経度の表示が巨大化する
       - 主に経度の表示が隣の表示と重なって読めない。
       - 緯度経度が過剰になるバグが直れば大丈夫かも
+      - ズームにかかわらず常に一定の大きさで表示されてほしい
+   - この不具合を修正した場合、仕様に挙動を書き加えること。
 
 4. **面情報の中は塗られていてほしい**
+   - 点線だけだと見づらい
    - この不具合を修正した場合、仕様に挙動を書き加えること。
 
 5. **測定ツールの測定結果が見づらい**
